--- a/main.yml
+++ b/main.yml
@@ -9,4 +9,5 @@
     - vars/main.yml
 
   tasks:
-    - include: tasks/dotfiles.yml
+    #- include: tasks/dotfiles.yml
+    - include: tasks/textmate.yml
